# fp-homework

./: README.md  stack.yaml
.stack-work/ghci/026ddad9/: cabal_macros.h
.stack-work/ghci/2286fef1/: cabal_macros.h
.stack-work/ghci/295575c7/: cabal_macros.h
.stack-work/ghci/453a5620/: cabal_macros.h
.stack-work/ghci/56475698/: cabal_macros.h
.stack-work/ghci/62cbee02/: cabal_macros.h
.stack-work/ghci/a7a34033/: cabal_macros.h
.stack-work/ghci/d4e4b7f9/: cabal_macros.h
.stack-work/ghci/d6468de3/: cabal_macros.h
.stack-work/ghci/d94e9913/: cabal_macros.h
.stack-work/ghci/db47c3c5/: cabal_macros.h
.stack-work/install/x86_64-linux/lts-13.12/8.6.4/flag-cache/: Glob-0.9.3-8OYmXL7hPIUBR31llgfWuf  HUnit-1.6.0.0-C6N9GX1vz2Z4nPL5JbE3ac  Only-0.1-4eYnxvcrr7tEbYgCvIkHLb  QuickCheck-2.12.6.1-CG92sgzQynB255SN47n2RX  abstract-deque-0.3-HExmLwTiG44LCDV4tLj8DR  abstract-par-0.3.3-7eQ2qvh3JUrFV0IzAkpSDj  aeson-1.4.2.0-JOh4qoiA2Hy3P9g6vFN4l0  ansi-terminal-0.8.2-LZ54B5ErqCiIlNwOVvnj65  (+69 more)
.stack-work/logs/: hw2-0.1.0.0.log-color
hw0/: README.md  hw0.cabal
hw0/src/: Task1.hs
hw1/: README.md  hw1.cabal
hw1/src/: Block1.hs  Block2.hs  Block3.hs  Block4.hs  Block5.hs
hw2/: README.md  hw2.cabal
hw2/src/: Block1.hs  Block2.hs  Block3.hs
hw2/test/: Block1Spec.hs  Block2Spec.hs  Block3Spec.hs  Spec.hs
hw3/: README.md  hw3.cabal  script.sh
hw3/app/: Main.hs
hw3/src/: Interpreter.hs  Parser.hs
hw4/: README.md  hw4.cabal
hw4/src/: Tasks.hs
hw4/test/: Spec.hs
hw5/: README.md  hw5.cabal
hw5/src/: BaseLenses.hs  FileSystem.hs
(+79 files in other folders)
