name:                hw5
version:             0.1.0.0
synopsis:            Synopsis for task 5
description:         Task 5 for FP ITMO course

homepage:            https://github.com/Scuuter/fp-homework/tree/master/hw5#readme
license:             MIT
license-file:        LICENSE
author:              Mikhail Varlamov
maintainer:          class.object@yandex.ru
copyright:           2019 Mikhail Varlamov

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Lib, BaseLenses, FileSystem
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , microlens
                     , directory
                     , filepath
  default-language:    Haskell2010

executable hw5
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw5
  default-language:    Haskell2010

test-suite hw5-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hw5
                     , criterion
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
